// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/ATTRIBUTE.proto";
import "../ccsds_mal/STRING.proto";


package pusGroundModel.protobuf;

message Pus011CommandParameter {
extensions 3 to 103;

  optional ccsds_mal.protobuf.STRING parameterName = 1;
  optional ccsds_mal.protobuf.ATTRIBUTE parameterValue = 2;
}
